<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView
    	android:id="@+id/detail_textView"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/INTRODUCTION"
    />
    <LinearLayout
    		android:id="@+id/detail_introduction"
    		android:layout_width="fill_parent"
    		android:layout_height="300px"
    		android:layout_weight="2"
    	/>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
	>
		<Button
			android:id="@+id/detail_button1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/STORE_MOVIE"
		/>
		<Button
			android:id="@+id/detail_button3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/detail_button1"
			android:layout_centerInParent="true"
			android:text="@string/SEE_MORE_PICS"
		/>
		<Button
			android:id="@+id/detail_button2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/detail_button3"
			android:layout_centerInParent="true"
			android:text="@string/MOVIE_EXIT"
		/>
	</RelativeLayout>

</LinearLayout>
