<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    android:background="@drawable/bg">
    	<EditText
    		android:id="@+id/search_text"
    		android:layout_height="60px"
    		android:layout_width="400px"
    		android:paddingRight="60px"
    		android:layout_centerInParent="true"
    		android:background="#FFFFFFFF"
    	/>
    	<ImageButton
    		android:id="@+id/search_imageButton"
    		android:layout_alignRight="@id/search_text"
    		android:layout_alignTop="@id/search_text"
    		android:layout_alignBottom="@id/search_text"
    		android:layout_width="60px"
    		android:layout_height="60px"
    	android:background="@drawable/search"/>
    	<Button
    		android:id="@+id/search_new"
    		android:layout_below="@id/search_text"
    		android:layout_alignLeft="@id/search_text"
    		android:layout_marginTop="40px"
    		android:layout_width="150px"
    		android:layout_height="50px"
    		android:text="@string/NEW_MOVIE"
    		android:background="#FFFFFFFF"
    	/>
    	<Button
    		android:id="@+id/search_store"
    		android:layout_toLeftOf="@id/search_new"
    		android:layout_alignRight="@id/search_text"
    		android:layout_alignTop="@id/search_new"
    		android:layout_width="150px"
    		android:layout_height="50px"
    		android:text="@string/MOVIE_STORE"
    		android:background="#FFFFFFFF"
    	/>
    	<Button
    		android:id="@+id/search_box"
    		android:layout_below="@id/search_new"
    		android:layout_marginTop="10px"
    		android:layout_alignLeft="@id/search_new"
    		android:layout_width="150px"
    		android:layout_height="50px"
    		android:text="@string/BOX_OFFICE"
    		android:background="#FFFFFFFF"
    	/>
    	<Button
    		android:id="@+id/search_history"
    		android:layout_alignTop="@id/search_box"
    		android:layout_alignLeft="@id/search_store"
    		android:layout_width="150px"
    		android:layout_height="50px"
    		android:text="@string/MOVIE_HISTORY"
    		android:background="#FFFFFFFF"
    	/>
    </RelativeLayout>
</LinearLayout>
